@@ -1,5 +1,6 @@
 0.17.4
  - fix: correctly handle dataset IDs and names in `DBExtract`
+ - fix: `get_datasets_user_shared` failed when many circles/collections exist
  - ref: decorate PyQtSlots
 0.17.3
  - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)
